--- a/3802-javascript-assincrono-projeto-base/index.html
+++ b/3802-javascript-assincrono-projeto-base/index.html
@@ -15,27 +15,29 @@
 </head>
 
 <body>
-    <img src="img/Logo.svg" alt="logo do codeconnect">
-    <nav>
-        <ul class="lista-links">
-            <li>
-               <a href="#" class="link-destaque">Publicar</a> 
-            </li>
-            <li>
-                <a href="#"><img src="./img/feed.svg" alt="">Feed</a>
-            </li>
-            <li>
-                <a href="#"><img src="./img/account_circle.svg" alt="">Perfil</a>
-            </li>
-            <li>
-                <a href="#"><img src="./img/info.svg" alt="">Perfil</a>
-            </li>
-            <li>
-                <a href="#"><img src="./img/logout.svg" alt="">Sair</a>
-            </li>
-        </ul>
-    </nav>
+    <aside>
+        <img src="img/Logo.svg" alt="logo do codeconnect">
     
+        <nav>
+            <ul class="lista-links">
+                <li>
+                <a href="#" class="link-destaque">Publicar</a> 
+                </li>
+                <li>
+                    <a href="#"><img src="./img/feed.svg" alt="">Feed</a>
+                </li>
+                <li>
+                    <a href="#"><img src="./img/account_circle.svg" alt="">Perfil</a>
+                </li>
+                <li>
+                    <a href="#"><img src="./img/info.svg" alt="">Perfil</a>
+                </li>
+                <li>
+                    <a href="#"><img src="./img/logout.svg" alt="">Sair</a>
+                </li>
+            </ul>
+        </nav>
+    </aside>
 </body>
 
 </html>
