--- a/3802-javascript-assincrono-projeto-base/index.html
+++ b/3802-javascript-assincrono-projeto-base/index.html
@@ -47,7 +47,7 @@
             <button>Carregar Imagem</button>
             <div class="container-imagem-nome">
                 <p>image_projeto.png</p>
-                <img src="./img/close-black.svg" alt="">
+                <img src="./img/close.svg" alt="">
             </div>
         </div>
         <div class="container-descricao">
