correição de escrita do botão

--- a/3802-javascript-assincrono-projeto-base/index.html
+++ b/3802-javascript-assincrono-projeto-base/index.html
@@ -72,7 +72,7 @@
                     </li>
                 </ul>
                 <div class="container-botoes">
-                    <button class="botao-descartar">Descatar</button>
+                    <button class="botao-descartar">Descartar</button>
                     <button class="botao-publicar">Publicar</button>
                 </div>
             </form>
