--- a/3802-javascript-assincrono-projeto-base/index.html
+++ b/3802-javascript-assincrono-projeto-base/index.html
@@ -10,7 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <script src="scripts.js" defer></script>
     <title>CodeConnect</title>
 </head>
 
@@ -44,7 +44,8 @@
             <div class="container-imagem">
                 <img class="main-imagem" src="img/imagem1.png" alt="">
             </div>
-            <button>Carregar Imagem</button>
+            <button id="upload-btn">Carregar Imagem</button>
+            <input type="file" id="image-upload" accept="image/" style="display: none;">
             <div class="container-imagem-nome">
                 <p>image_projeto.png</p>
                 <img src="./img/close.svg" alt="">
