função de adicionar tags impletamentado

--- a/3802-javascript-assincrono-projeto-base/index.html
+++ b/3802-javascript-assincrono-projeto-base/index.html
@@ -64,9 +64,9 @@
                 </div>
                 <div>
                     <label for="categoria">Tags</label>
-                    <input type="text" id="categoria" name="categoria" />
+                    <input type="text" id="input-tags" name="categoria" />
                 </div>
-                <ul class="lista-tags">
+                <ul class="lista-tags" id="lista-tags">
                     <li>
                         <p>Front-End</p>
                         <img src="./img/close-black.svg" alt="x de fechar">
