menu hambúrguer adicionado, responsividade para 400px

--- a/3802-javascript-assincrono-projeto-base/index.html
+++ b/3802-javascript-assincrono-projeto-base/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <aside>
+        <button class="menu-hamburguer" aria-label="Abrir menu">&#9776;</button>
         <img src="img/Logo.svg" alt="logo do codeconnect">
     
         <nav>
